changed edu to html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ and open the template in the editor.
         </section>
         <div id ="horizontal">
                 <ul id="navbar">
-                    <li><a href="edu.jsp">EDUCATION</a></li>
+                    <li><a href="edu.html">EDUCATION</a></li>
                     <li><a href="csskills.jsp">COMPUTER SKILLS</a></li>
                     <li><a href="exp.jsp">EXPERIENCES</a></li>
                     <li><a href="port.jsp">PORTFOLIO</a></li>
