--- a/edu.html
+++ b/edu.html
@@ -1,14 +1,26 @@
-<%-- 
-    Document   : edu
-    Created on : Jan 20, 2016, 2:50:14 PM
-    Author     : Elena
---%>
-
 <!DOCTYPE html>
 <html>
- <%@page contentType="text/html" pageEncoding="UTF-8"%>
- <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
- <c:import url="/includes/header.html"/>
+
+<head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="styles/links.css" type="text/css"/>
+        <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+        <script type="text/javascript" src="js/jquery-1.12.0.js"></script>
+        <script type="text/javascript" src="js/unslider.js"></script>
+        <title>Elena Sparacio Interactive Resume</title>
+        <script type="text/javascript">
+                $(document).ready(function(){
+                $("body").css("display","none");
+                $("body").fadeIn(1000);           
+            });
+
+        </script>
+</head>
+
    
     <body>
         <a href="index.html"><img class="logo" src="images/logospace.png" alt="logo"></a>
