Changed jsps to html files and removed includes directives

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ and open the template in the editor.
         <div id ="horizontal">
                 <ul id="navbar">
                     <li><a href="edu.html">EDUCATION</a></li>
-                    <li><a href="csskills.jsp">COMPUTER SKILLS</a></li>
-                    <li><a href="exp.jsp">EXPERIENCES</a></li>
-                    <li><a href="port.jsp">PORTFOLIO</a></li>
+                    <li><a href="csskills.html">COMPUTER SKILLS</a></li>
+                    <li><a href="exp.html">EXPERIENCES</a></li>
+                    <li><a href="port.html">PORTFOLIO</a></li>
                     <li><a href="pdfs/resume.pdf">RESUME</a></li>
-                    <li><a href="contact.jsp">CONTACT ME</a></li>  
+                    <li><a href="contact.html">CONTACT ME</a></li>  
             </ul>
         </div>
     </body>
