--- a/edu.html
+++ b/edu.html
@@ -40,23 +40,12 @@
             <p><i>Elon College Fellow and Presidential Scholar</i></p>
             <p><b>Major:</b> Computer Science</p>
             <p><b>Minor:</b> English - Creative Writing </p>
-            <p><b>GPA:</b> 3.5</p>
-            <p><b>Relevant Coursework:</b> Computer Science I, II, III; Mobile Computing, Discrete Structures. 
-            Programming Languages, Algorithm Analysis, and Computer Systems to be completed after Spring
-            2016.</p>
+            <p><b>GPA:</b> 3.6</p>
+            <p><b>Relevant Coursework:</b> Computer Science I, II, III, and IV; Mobile Computing, Discrete Structures, Programming Languages, Algorithm Analysis, Computer Systems, Game Programming, Design Patterns, and Research hours.</p>
         </section>
         <section class="full">
             <h3>About</h3>
-                <p>I am a junior at Elon University, a private liberal arts college in 
-                Elon, North Carolina. I am looking for a technological internship in 
-                the Alpharetta/Atlanta area for the summer of 2016. I am a Computer Science major 
-                with a minor in English - Creative Writing, and an Elon College Fellow. 
-                As of this year, I am performing mentored research focusing on mobile applications 
-                and the use of a volumetric device as a tangible display. 
-                In the Spring, I will be taking Programming Languages and Algorithm Analysis,
-                which will broaden my base of knowledge in languages and give me the ability to
-                create the cleanest and most efficient code possible. I hope to use these skills
-                this summer at a company near my hometown. </p>
+                <p>I am currently a senior at Elon University, with a major in Computer Science major and a minor in English, seeking full time employment in the Southeast. I am graduating February of 2017 and hope to work for a company developing software. </p>
             <h3>Honors and Awards</h3>
             <table>
                 <col style="width:15%;">
@@ -75,7 +64,7 @@
                 </tr>
                 <tr>
                     <td><img class="award" src="images/wreath.png" alt="award"></td>
-                    <td>Dean's List: 1 semester (3.5-3.7)</td>
+                    <td>Dean's List: 3 semesters (3.5-3.7)</td>
                 </tr>
                  <tr>
                     <td><img class="award" src="images/wreath.png" alt="award"></td>
