Changed contact and typo in education section

--- a/edu.html
+++ b/edu.html
@@ -45,7 +45,7 @@
         </section>
         <section class="full">
             <h3>About</h3>
-                <p>I am currently a senior at Elon University, with a major in Computer Science major and a minor in English, seeking full time employment in the Southeast. I am graduating February of 2017 and hope to work for a company developing software. </p>
+                <p>I am currently a senior at Elon University, with a major in Computer Science and a minor in English, seeking full time employment in the Southeast. I am graduating February of 2017 and hope to work for a company developing innovative, unique software. </p>
             <h3>Honors and Awards</h3>
             <table>
                 <col style="width:15%;">
