Updated skills and experience sections, and added *ideas* for portfolio additions

--- a/csskills.html
+++ b/csskills.html
@@ -35,19 +35,17 @@
         <a href="pdfs/research.pdf">
         <section class="edu">
             <h3>Undergraduate Research</h3>
-            <p>Elon College Fellows Research, in-progress and to be completed Fall 2016;
-                research on exploring the potential of using a tangible interface/volumetric 
-                display in 3D mobile application development</p>
+            <p>I am doing research on exploring the potential of using a tangible interface/volumetric display in 3D mobile application development. This project explores the design and implementation of software to support games that combine an Android mobile device and an LED cube. I will be presenting at Consortium for Computing Sciences in Colleges South East Conference in November.</p>
             <p><i>Click for full overview. It may take a few moments to load, so please
                 be patient. </i></p>
         </section></a>
         <div>
         <section class="full">
-            <p><b>Programming Languages:</b> Java, Python, HTML, CSS, EL, XML, JavaScript, SQL, LUA</p>
-            <p><b>Experience with:</b> Web Development, Responsive Web Design, jQuery, Servlets/JSPs, 
+            <p><b>Programming Languages:</b>  Java, Python, Perl, Unix/Linux, C, C++, C#, JavaScript, HTML/CSS, EL, XML, SQL, Swift, LUA</p>
+            <p><b>Experience with:</b> Agile/Scrum, Web Development, Responsive Web Design, jQuery, Servlets/JSPs, 
             object-oriented programming, databases, JDBC, user interfaces, web architecture concepts,
-            MCV design patterns, debugging, Agile/Scrum</p>
-            <p><b>Applications:</b> Github, Openshift, Apache Tomcat, MySQL, mySQLWorkbench, Processing,
+            MCV design patterns, debugging, Game Programming</p>
+            <p><b>Applications:</b> Github, Openshift, Unity, Apache Tomcat, MySQL, mySQLWorkbench, Processing,
             Particle.io, Android Studio, Netbeans, Eclipse, Sublime, Mathematica, Microsoft Office, 
             Expression Web, Photoshop, Social Media Platforms</p>
             <p><b>Operating Systems:</b> Mac OSX, Windows, Linux, Android, iOS</p>
