--- a/port.html
+++ b/port.html
@@ -77,8 +77,12 @@
             in Web Development, jQuery, Responsive Web Design, Servlets/JSPs
             object-oriented programming, user interfaces, web architecture concepts,
             MCV design patterns, debugging, etc. It utilizes the languages Java, HTML, CSS, and JavaScript.</p> 
-            <p class="para">I uploaded my code for the website onto my <a href="https://github.com/esparacio/resumesite"> GitHub account</a>, so feel free to take a look at the 
-              code. </p>
+            <p class="para">The website is hosted through my <a href="https://github.com/esparacio/interactive-resume"> GitHub account</a>, so feel free to take a look at the 
+              repository. </p>
+        </section>
+        <section class="web">
+            <h3>Game Design and Programming<h3>
+                <p class = "para">Add sections here for game programs that should be showcased (FPS, card game, and final project). For final project include blender 3d rendering</p>
         </section>
         <section class="mob">
             <h3>Mobile: Around Campus App</h3>
