--- a/exp.html
+++ b/exp.html
@@ -43,6 +43,12 @@
         </section>
         <section class ="full">
             <h3>Related Work Experiences</h3>
+                <p><b>Software Engineer</b></p>
+                <p><i>ARRIS, Suwanne, GA</i></p>
+                <ul><li>
+                     Coded Perl and Unix scripts to optimize and streamline the command line interface testing of over 4000 commands for the E6000 router
+                    </li>
+                </ul>
                 <p><b>Robotics and Programming Instructor</b></p>
                 <p><i>Imagine That and Future Tech, Alpharetta, GA</i></p>
                 <ul><li>
