--- a/port.html
+++ b/port.html
@@ -52,6 +52,12 @@
                 prev: '<a class="unslider-arrow prev"><</a>',
                 next: '<a class="unslider-arrow next">></a>'}
         });
+        $('.slider4').unslider({
+            autoplay:true,
+            arrows: {
+                prev: '<a class="unslider-arrow prev"><</a>',
+                next: '<a class="unslider-arrow next">></a>'}
+        });
     });	
 	</script>
  
@@ -80,9 +86,19 @@
             <p class="para">The website is hosted through my <a href="https://github.com/esparacio/interactive-resume"> GitHub account</a>, so feel free to take a look at the 
               repository. </p>
         </section>
-        <section class="web">
+        <section class="re">
             <h3>Game Design and Programming<h3>
-                <p class = "para">Add sections here for game programs that should be showcased (FPS, card game, and final project). For final project include blender 3d rendering</p>
+                <p class = "para">I developed several games and skills during my Game Development class. Below, I have included images of a first person shooter game, a matching card game, a 3D model of a blob (for a game currently in development, H20 Blob), and the scene for the future H20 Blob game. </p>
+                <div class="slider4">
+                <ul>
+                    <li class="slid"><img class="research" src="images/gameprog/fpsgame.png" alt="firstpersonshooter"></li>
+                    <li class="slid"><img class="research" src="images/gameprog/cardgame.png" alt="cardgame"></li>
+                    <li class="slid"><img class="research" src="images/gameprog/blobblend.png" alt="blendermodel"></li>
+                    <li class="slid"><img class="research" src="images/gameprog/unityeditor.png" alt="unityeditor"></li>  
+                </ul>
+            </div>
+            <br> </br>
+            <p>  </p>
         </section>
         <section class="mob">
             <h3>Mobile: Around Campus App</h3>
