--- a/port.html
+++ b/port.html
@@ -86,9 +86,9 @@
             <p class="para">The website is hosted through my <a href="https://github.com/esparacio/interactive-resume"> GitHub account</a>, so feel free to take a look at the 
               repository. </p>
         </section>
-        <section class="re">
+        <section class="mobile">
             <h3>Game Design and Programming<h3>
-                <p class = "para">I developed several games and skills during my Game Development class. Below, I have included images of a first person shooter game, a matching card game, a 3D model of a blob (for a game currently in development, H20 Blob), and the scene for the future H20 Blob game. </p>
+                <p class = "para">I developed several games and skills during my Game Development class. Below, <b>I</b> have included images of a first person shooter game, a matching card game, a 3D model of a blob (for a game currently in development, H20 Blob), and the scene for the future H20 Blob game. </p>
                 <div class="slider4">
                 <ul>
                     <li class="slid"><img class="research" src="images/gameprog/fpsgame.png" alt="firstpersonshooter"></li>
