Bolding issue fix and reordering of portfolio

--- a/port.html
+++ b/port.html
@@ -86,9 +86,28 @@
             <p class="para">The website is hosted through my <a href="https://github.com/esparacio/interactive-resume"> GitHub account</a>, so feel free to take a look at the 
               repository. </p>
         </section>
-        <section class="mob">
+        <section class="re">
+            <h3>Research</h3>
+            <p class="para">My undergraduate research focuses on innovative mobile application development through
+                the use of volumetric/tangible displays. To learn more, follow <a class="linky" href="pdfs/research.pdf">THIS</a> link.</p>
+            <div class="slider2">
+                <ul>
+                    <li class="slid"><img class="research" src="images/research/presentation.jpg" alt="present"></li>
+                    <li class="slid"><img class='research' src="images/research/cubielights.jpg" alt="cube"></li>
+                    <li class="slid"><img class="research" src="images/research/cubecode.png" alt="code"></li>
+                    <li class="slid"><img class="research" src="images/research/cube1.jpg" alt="cube1"></li>
+                    <li class="slid"><img class="research" src="images/research/cube2.jpg" alt="cube2"></li>
+                    <li class="slid"><img class="research" src="images/research/cube3.jpg" alt="cube3"></li>
+                    <li class="slid"><img class="research" src="images/research/cube4.jpg" alt="cube4"></li>
+                    <li class="slid"><img class="research" src="images/research/cube5.jpg" alt="cube5"></li>
+                </ul>
+            </div>
+            <br> </br>
+            <p>  </p>
+        </section>
+        <section class="re">
             <h3>Game Design and Programming<h3>
-                <p class = "para"><b></b>I developed several games and skills during my Game Development class. Below, I have included images of a first person shooter game, a matching card game, a 3D model of a blob (for a game currently in development, H20 Blob), and the scene for the future H20 Blob game. </p>
+                <p class = "para"><b>Games:</b>I developed several games and skills during my Game Development class. Below, I have included images of a first person shooter game, a matching card game, a 3D model of a blob (for a game currently in development, H20 Blob), and the scene for the future H20 Blob game. </p>
                 <div class="slider4">
                 <ul>
                     <li class="slid"><img class="research" src="images/gameprog/fpsgame.png" alt="firstpersonshooter"></li>
@@ -113,25 +132,6 @@
                     <li class="slid"><img class="mobile" src="images/mobile/ac1.png" alt="work"></li>
                     <li class="slid"><img class="mobile" src="images/mobile/ac2hours.png" alt="hours"></li>
                     <li class="slid"><img class="mobile" src="images/mobile/ac3map.png" alt="map"></li>
-                </ul>
-            </div>
-            <br> </br>
-            <p>  </p>
-        </section>
-        <section class="re">
-            <h3>Research</h3>
-            <p class="para">My undergraduate research focuses on innovative mobile application development through
-                the use of volumetric/tangible displays. To learn more, follow <a class="linky" href="pdfs/research.pdf">THIS</a> link.</p>
-            <div class="slider2">
-                <ul>
-                    <li class="slid"><img class="research" src="images/research/presentation.jpg" alt="present"></li>
-                    <li class="slid"><img class='research' src="images/research/cubielights.jpg" alt="cube"></li>
-                    <li class="slid"><img class="research" src="images/research/cubecode.png" alt="code"></li>
-                    <li class="slid"><img class="research" src="images/research/cube1.jpg" alt="cube1"></li>
-                    <li class="slid"><img class="research" src="images/research/cube2.jpg" alt="cube2"></li>
-                    <li class="slid"><img class="research" src="images/research/cube3.jpg" alt="cube3"></li>
-                    <li class="slid"><img class="research" src="images/research/cube4.jpg" alt="cube4"></li>
-                    <li class="slid"><img class="research" src="images/research/cube5.jpg" alt="cube5"></li>
                 </ul>
             </div>
             <br> </br>
