--- a/port.html
+++ b/port.html
@@ -106,8 +106,8 @@
             <p>  </p>
         </section>
         <section class="re">
-            <h3>Game Design and Programming<h3>
-                <p class = "para"> <i>I developed several games and skills during my Game Development class. Below, I have included images of a first person shooter game, a matching card game, a 3D model of a blob (for a game currently in development, H20 Blob), and the scene for the future H20 Blob game. </i></p>
+            <h3>Game Design and Programming</h3>
+                <p class = "para"> I developed several games and skills during my Game Development class. Below, I have included images of a first person shooter game, a matching card game, a 3D model of a blob (for a game currently in development, H20 Blob), and the scene for the future H20 Blob game. </p>
                 <div class="slider4">
                 <ul>
                     <li class="slid"><img class="research" src="images/gameprog/fpsgame.png" alt="firstpersonshooter"></li>
