--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,16 @@
                  </ul>
         </div>
         <section class="for">
-            <h3>3095 Arborwoods Drive&#44; Alpharetta&#44; GA 30022 &#126; 
-            Phone&#58; 908&#45;256&#45;6414 &#126; E&#45;mail&#58; esparacio&#64;elon.edu </h3>
-            <h3> </h3>
+            <h3> Phone&#58; 908&#45;256&#45;6414  
+            <br>
+            E&#45;mail&#58; <a href="esparacio@elon.edu">esparacio&#64;elon.edu</a>
+            <br>
+            Home Address&#58; 3095 Arborwoods Drive&#44; Alpharetta&#44; GA 30022 
+            <br>  
+            School Address&#58; Campus Box 9335 &#44; 100 University Drive &#44; Elon&#44; NC 27244
+           </h3>
+           <br>
+           <p> I look forward to hearing from you soon! 
         </section>
        
     </body>
