Added updated resume and computer skills section

--- a/csskills.html
+++ b/csskills.html
@@ -42,12 +42,8 @@
         <div>
         <section class="full">
             <p><b>Programming Languages:</b>  Java, Python, Perl, Unix/Linux, C, C++, C#, JavaScript, HTML/CSS, EL, XML, SQL, Swift, LUA</p>
-            <p><b>Experience with:</b> Agile/Scrum, Web Development, Responsive Web Design, jQuery, Servlets/JSPs, 
-            object-oriented programming, databases, JDBC, user interfaces, web architecture concepts,
-            MCV design patterns, debugging, Game Programming</p>
-            <p><b>Applications:</b> Github, Openshift, Unity, Apache Tomcat, MySQL, mySQLWorkbench, Processing,
-            Particle.io, Android Studio, Netbeans, Eclipse, Sublime, Mathematica, Microsoft Office, 
-            Expression Web, Photoshop, Social Media Platforms</p>
+            <p><b>Experience with:</b> Agile/Scrum, web development, responsive web design, servlets/JSPs, jQuery, object-oriented programming, databases, JDBC, user interfaces, web architecture concepts, MVC design patterns, debugging, game development, version control, automated testing</p>
+            <p><b>Applications:</b> Eclipse, GitHub, Openshift, Unity, Apache Tomcat, MySQL, mySQLWorkbench, Processing, Patricle.io, Android Studio, XCode, Netbeans, ClearCase, Sublime, Mathematica, Microsoft Office, Expression Web, Photoshop, Social Media Platforms</p>
             <p><b>Operating Systems:</b> Mac OSX, Windows, Linux, Android, iOS</p>
         </section></div>
     </body>
