Updated for Sept 2017

--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,8 @@
             <br>
             E&#45;mail&#58; <a href="mailto:esparacio@elon.edu">esparacio&#64;elon.edu</a> , <a href=https://www.linkedin.com/in/elena-sparacio-48a057107>LinkedIn</a>
             <br>
-            Home Address&#58; 3095 Arborwoods Drive&#44; Alpharetta&#44; GA 30022 
+            Home Address&#58; 12326 Deer Trail&#44; Alpharetta&#44; GA 30004 
             <br>  
-            School Address&#58; Campus Box 9335 &#44; 100 University Drive &#44; Elon&#44; NC 27244
-            <br>
 
            </h3>
         </section>
