--- a/exp.html
+++ b/exp.html
@@ -48,6 +48,12 @@
                 <ul><li>
                      Coded Perl and Unix scripts to optimize and streamline the command line interface testing of over 4000 commands for the E6000 router
                     </li>
+                    <li>
+                     Programmed product features in C++ using large libraries and a complex codebase
+                    </li>
+                    <li>
+                     Collaborated closely with other team members to develop solutions to product defects  
+                    </li>
                 </ul>
                 <p><b>Robotics and Programming Instructor</b></p>
                 <p><i>Imagine That and Future Tech, Alpharetta, GA</i></p>
