--- a/edu.html
+++ b/edu.html
@@ -45,7 +45,9 @@
         </section>
         <section class="full">
             <h3>About</h3>
-                <p>I am currently a senior at Elon University, with a major in Computer Science and a minor in English, seeking full time employment in the Southeast. I am graduating February of 2017 and hope to work for a company developing innovative, unique software. </p>
+                <p>I am currently a Software Engineer at ARRIS, a Fortune 500 tech company in Suwanee, GA. I have a major in Computer Science and a minor in English. I work on the several parts of the Command Line Interface for the E6000 router. I work on the CLI-TEST, a comprehensive automated test that runs error, help, and functionality testing for the commands. I also work on implementing those CLI commands for feature development. I mainly work in C++, Perl, and shell scripting. </p>
+                <br>
+                <p>At college, I worked in mainly different languages such as Java, Python, and C#. I worked on major projects in mobile application development, game development, and web development. Examples of these projects can be seen in the portfolio section.</p>
             <h3>Honors and Awards</h3>
             <table>
                 <col style="width:15%;">
@@ -60,11 +62,11 @@
                 </tr>
                 <tr>
                     <td><img class="award" src="images/wreath.png" alt="award"></td>
-                    <td>President's List: 4 semesters (3.7 or above)</td>
+                    <td>President's List: 6 semesters (3.7 or above)</td>
                 </tr>
                 <tr>
                     <td><img class="award" src="images/wreath.png" alt="award"></td>
-                    <td>Dean's List: 3 semesters (3.5-3.7)</td>
+                    <td>Dean's List: 4 semesters (3.5-3.7)</td>
                 </tr>
                  <tr>
                     <td><img class="award" src="images/wreath.png" alt="award"></td>
