Updated education and experience sections

--- a/exp.html
+++ b/exp.html
@@ -44,15 +44,19 @@
         <section class ="full">
             <h3>Related Work Experiences</h3>
                 <p><b>Software Engineer</b></p>
-                <p><i>ARRIS, Suwanne, GA</i></p>
-                <ul><li>
-                     Coded Perl and Unix scripts to optimize and streamline the command line interface testing of over 4000 commands for the E6000 router
+                <p><i>ARRIS, Suwanee, GA</i></p>
+                <ul>
+                    <li>Programmed product features for customers such as Comcast, Charter, and Stofa in C++ using large libraries and a complex codebase for major E6000 releases
                     </li>
-                    <li>
-                     Programmed product features in C++ using large libraries and a complex codebase
+                    <li>Became the team expert for the CLI-TEST: coding Perl and Unix scripts to automate, optimize, and streamline the command line interface testing of over 4000 commands for the E6000 CMTS
                     </li>
-                    <li>
-                     Collaborated closely with other team members to develop solutions to product defects  
+                    <li>Performed quality analysis of CLI Tests using the E6000 chassis and E6000 simulator to diagnose and uncover critical issues 
+                    </li>
+                    <li>Lead the team’s software development phase of code collaboration (CLABs) for the SDN-based E6000 software release, where team-wide collaboration is required for early detection of defects
+                    </li>
+                    <li>Performed several side projects: created a formal code review tool using Code Collaborator, maintained “gtest” – a unique way of compiling our code to improve compile time exponentially, and created our team’s Confluence reference pages
+                    </li>
+                    <li>Selected as a Site Lead for the intern program last summer, represented ARRIS at several events, and trained two other engineers on the team
                     </li>
                 </ul>
                 <p><b>Robotics and Programming Instructor</b></p>
