--- a/edu.html
+++ b/edu.html
@@ -47,7 +47,20 @@
             <h3>About</h3>
                 <p>I am currently a Software Engineer at ARRIS, a Fortune 500 tech company in Suwanee, GA. I have a major in Computer Science and a minor in English. I work on the several parts of the Command Line Interface for the E6000 router. I work on the CLI-TEST, a comprehensive automated test that runs error, help, and functionality testing for the commands. I also work on implementing those CLI commands for feature development. I mainly work in C++, Perl, and shell scripting. </p>
                 <br>
-                <p>At college, I worked in mainly different languages such as Java, Python, and C#. I worked on major projects in mobile application development, game development, and web development. Examples of these projects can be seen in the portfolio section.</p>
+                <p>In college, I worked in many different languages such as Java, Python, and C#. I worked on major projects in mobile application development, game development, and web development. Examples of these projects can be seen in the portfolio section.</p>
+                <br>
+
+            <h3>Elon College Fellows Program</h3>  
+            <ul>
+                <li>Elon College Fellows is a four-year program for students who are passionately committed to exploring the breadth, depth and connections within the Arts and Sciences
+                </li>
+                <li>Received an annual scholarship, travel grant, and research funding as part of the experience
+                </li>  
+                <li>Engaged in two years of undergraduate research that was supplemented by three unique seminar courses
+                </li>     
+                <li>Presented this research at the Consortium of Computing Sciences in 2017
+                </li>                                            
+            </ul>                 
             <h3>Honors and Awards</h3>
             <table>
                 <col style="width:15%;">
@@ -74,7 +87,7 @@
                 </tr>
             </table>
             <h3>Coursework</h3>
-                <p>Throughout the course of college I have developed several mobile applications,
+                <p>Throughout the course of college I developed several mobile applications,
                 websites, and programs. Click <a class="linky" href="port.jsp"> HERE</a> to look at my full portfolio, or
                 follow <a class="linky" href="pdfs/research.pdf">THIS</a> link to see my undergraduate research.</p>
         </section>
