General updates for the website. New resume and changed present tense to past for college experiences

--- a/csskills.html
+++ b/csskills.html
@@ -35,7 +35,7 @@
         <a href="pdfs/research.pdf">
         <section class="edu">
             <h3>Undergraduate Research</h3>
-            <p>I am doing research on exploring the potential of using a tangible interface/volumetric display in 3D mobile application development. This project explores the design and implementation of software to support games that combine an Android mobile device and an LED cube. I presented this work at the Consortium for Computing Sciences in Colleges South East Conference in 2016.</p>
+            <p>In college, I did research on exploring the potential of using a tangible interface/volumetric display in 3D mobile application development. The project explored the design and implementation of software to support games that combine an Android mobile device and an LED cube. I presented this work at the Consortium for Computing Sciences in Colleges South East Conference in 2016.</p>
             <p><i>Click for full overview. It may take a few moments to load, so please
                 be patient. </i></p>
         </section></a>
@@ -43,7 +43,7 @@
         <section class="full">
             <p><b>Programming Languages:</b> Java, C++, Python, Perl, Unix/Linux, C, C#, JavaScript (limited), HTML/CSS, EL, XML, SQL, Swift (limited), LUA</p>
             <p><b>Experience with:</b> Agile/Scrum, web development, responsive web design, servlets/JSPs, jQuery, object-oriented programming, databases, JDBC, user interfaces, web architecture concepts, MVC design patterns, debugging, game development, version control, automated testing</p>
-            <p><b>Applications:</b> Eclipse, GitHub, Openshift, Unity, Apache Tomcat, MySQL, mySQLWorkbench, Processing, Patricle.io, Android Studio, XCode, Netbeans, ClearCase, Code Collaborator, Sublime, Mathematica, Microsoft Office, Expression Web, Photoshop, Social Media Platforms</p>
+            <p><b>Applications:</b> Eclipse, Confluence, ClearCase, GitHub, Code Collaborator, Bitbucket, Unity, Apache Tomcat, Openshift, MySQL/mySQLWorkbench, Processing, Particle.io, Android Studio, XCode, Netbeans, Microsoft Office, Photoshop, Social Media Platforms</p>
             <p><b>Operating Systems:</b> Mac OSX, Windows, Linux, Android, iOS</p>
         </section></div>
     </body>
