--- a/port.html
+++ b/port.html
@@ -88,7 +88,7 @@
         </section>
         <section class="re">
             <h3>Research</h3>
-            <p class="para">My undergraduate research focuses on innovative mobile application development through
+            <p class="para">My undergraduate research focused on innovative mobile application development through
                 the use of volumetric/tangible displays. To learn more, follow <a class="linky" href="pdfs/research.pdf">THIS</a> link.</p>
             <div class="slider2">
                 <ul>
@@ -107,7 +107,7 @@
         </section>
         <section class="re">
             <h3>Game Design and Programming</h3>
-                <p class = "para"> I developed several games and skills during my Game Development class. Below, I have included images of a first person shooter game, a matching card game, a 3D model of a blob (for a game currently in development, H20 Blob), and the scene for the future H20 Blob game. Take a look at the final product of my H20 Blob game <a href="https://acuteh20blob.wordpress.com/"> HERE</a>, </p>
+                <p class = "para"> I developed several games and skills during my Game Development class. Below, I have included images of a first person shooter game, a matching card game, a 3D model of a blob (for our final project, H20 Blob), and the scene for the H20 Blob game. Take a look at the final product of my H20 Blob game <a href="https://acuteh20blob.wordpress.com/"> HERE</a>, </p>
                 <div class="slider4">
                 <ul>
                     <li class="slid"><img class="research" src="images/gameprog/fpsgame.png" alt="firstpersonshooter"></li>
