Redirect to new site

--- a/index.html
+++ b/index.html
@@ -39,5 +39,13 @@ and open the template in the editor.
                     <li><a href="contact.html">CONTACT ME</a></li>  
             </ul>
         </div>
+        <a href="https://esparacio.github.io/interactive-portfolio/">
+            <br>
+            <div class="whiteBox">
+            <h2>WE'VE MOVED!</h2>
+            <h2>Click to be directed to the new site. </h2>
+            <h2>This site is outdated and no longer represents my skillset.</h2>
+        </div>
+    </a>
     </body>
 </html>
